# mdscan

./: .gitignore  CLAUDE.md  README.md  demo.md  pyproject.toml
docs/: cli-audit.md  plan-cli-v0.3.md  plan-v0.2.md
src/mdscan/: __init__.py  __main__.py  _types.py  cli.py  color.py  config.py  formatter.py  frontmatter.py  links.py  scanner.py  tree.py
tests/: conftest.py  test_cli.py  test_config.py  test_frontmatter.py  test_links.py  test_scanner.py  test_tree.py
